# M2i_CDSD_TDTP

./: .gitignore  ab_test_data.csv  promotion_test_data.csv  pyproject.toml  requirements.txt  satisfaction_scores_data.csv
2025_10_10_Jupiter/demos/: demo1_markdown.ipynb
2025_10_13_bash/exos/: exo12.sh  exo13.sh  exo15.sh  exo17.sh  exo6.sh  exo8.sh  exo9.sh
2025_10_20_python_base/demos/: demo03_operateurs.py  demo04_condition.py  demo05_iteration.py  demo06_fonction.py
2025_10_20_python_base/exos/: exo04.py  exo08.py  exo10.py  exo15.py  exo20.py  exo21.py  exo25.py  exo28.py  exo32.py  exo36.py
2025_10_27_python_avance/demos/: demo02_classattribute_methodattribute.py  demo03_heritage.py  demo04_abstractclass.py  demo05_cast_class.py  demo06_enum.py  demo09_exception.py
2025_10_27_python_avance/exercices/: exo10.py  exo4.py  exo5.py  exo_bonus1.py
2025_10_29_git/demos/: demo1_config.sh
2025_10_29_git/exercices/: ex01.sh  exo2.sh
2025_11_03_docker/exos/: exo1.sh  exo10.sh  exo2.sh  exo3.sh  exo8.sh  exo9.sh
2025_11_10_MinIO/exos/: client-policy.json  customers_am.txt  exo1.py  exo2.py  exo3.md  exo3.py  manager-policy.json
2025_11_10_MinIO/installation/: docker.md
2025_11_10_MinIO/orders/: orders_20251114T084212.json
analyse_multivariee/demo/: 01_pearson.ipynb  02_acp.ipynb  03_af.py  jour_02_etape1-2-3-4-5-6.py  requirements.txt
analyse_multivariee/exos/: exo1.ipynb  exo2.ipynb
api_flask_fast_api/demo/: 03_json_handling.py
api_flask_fast_api/exos/: exo2.py  exo3.py  exo5.py
apprentissage_non_suppervise/demos/: agglomerative_clustring.ipynb  dbscan.ipynb  kmeans.ipynb  mesure_externe.ipynb
apprentissage_non_suppervise/exos/: .gitignore  tp_dbscan.ipynb  tp_kmeans.ipynb
aws_s3/demo/: workshop.ipynb
aws_s3/tp-solution/: docker-compose.yml
etl/: docker-compose.yml
spark/: README.md
spark_mllib/: Dockerfile
sql_fondamental/: docker-compose.yml
tps/: 2025_12_12-Web_Scraping-TP3.txt
(+705 files in other folders)
