[project]
name = "m2i-cdsd-tdtp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.10",
    "lorem-text>=3.0",
    "matplotlib>=3.10.7",
    "minio>=7.2.18",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "psycopg[binary,pool]>=3.2.13",
    "pydantic[email]>=2.12.4",
    "seaborn>=0.13.2",
]
