[project]
name = "m2i-cdsd-tdtp"
version = "0.1.0"
description = "TD et TP de la formation Concepteur Développeur en Science des Données de M2i."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fake-useragent>=2.2.0",
    "jupyterlab>=4.4.10",
    "lorem-text>=3.0",
    "lxml>=6.0.2",
    "markdown-pdf>=1.10",
    "matplotlib>=3.10.7",
    "minio>=7.2.18",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "psycopg[binary,pool]>=3.2.13",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
    "pymongo>=4.15.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "scrapy>=2.13.4",
    "seaborn>=0.13.2",
    "structlog>=25.5.0",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]
